apps/arr/jellyfin/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: lscr.io/linuxserver/jellyfin:latest
          ports:
            - name: web
              containerPort: 8096
            - name: local-discovery
              containerPort: 7359
            - name: dlna
              containerPort: 1900
          volumeMounts:
            - name: data
              mountPath: /config
            - name: movies
              mountPath: /data/movies
            - name: tv
              mountPath: /data/tv
          resources:
            requests:
              cpu: "2"
              # nvidia.com/gpu: 1
            limits:
              cpu: "4"
              # nvidia.com/gpu: 1
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: jellyfin-data-pvc
        - name: movies
          hostPath:
            path: /mnt/media/library/movies
            type: Directory
        - name: tv
          hostPath:
            path: /mnt/media/library/tv
            type: Directory
